Adding files for last commit

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
 <script src="js/pixi.min.js"></script>
 <body>
-    <h1>welcome</h1>
+    <!-- <h1>welcome</h1> -->
+	
+    <script src="js/entity.js"></script>
     <script src="js/createScene.js"></script>
 </body>
 
