--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<script src="js/pixi.min.js"></script>
+<script src="pixi.min.js"></script>
 <body>
     <!-- <h1>welcome</h1> -->
 	
-    <script src="js/entity.js"></script>
-    <script src="js/createScene.js"></script>
+    <script src="entity.js"></script>
+    <script src="createScene.js"></script>
 </body>
 
 </html>
