Added more changes to workings

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <!-- <h1>welcome</h1> -->
 	
     <script src="entity.js"></script>
+    <script src="scene.js"></script>
     <script src="createScene.js"></script>
 </body>
 
