xmlhttpreq working and sending info to route to store in db

--- a/public/signup.html
+++ b/public/signup.html
@@ -73,7 +73,7 @@
         <hr>
         <div class="form-buttons">
           <button type="button" id="account-form-btn1" class="btn btn-default"></button>
-          <button type="submit" id="account-form-btn2" class="btn btn-primary"></button>
+          <button type="submit" id="account-form-btn2" class="btn btn-primary"><a href="/game"></a></button>
         </div>
         <div class="clearfix"></div>
       </form>
