--- a/public/signup.html
+++ b/public/signup.html
@@ -46,13 +46,13 @@
         <div class="form-group">
           <label class="control-label col-sm-3">Name</label>
           <div class="col-sm-9">
-            <input id="name-tf" type="text" name="name" class="form-control">
+            <input id="name-tf" type="text" name="name" value="Pratishta Yerakala" class="form-control">
           </div>
         </div>
         <div class="form-group">
           <label class="control-label col-sm-3">Email</label>
           <div class="col-sm-9">
-            <input id="email-tf" type="text" name="email" class="form-control">
+            <input id="email-tf" type="text" name="email" value="my@email.com" class="form-control">
           </div>
         </div>
         
@@ -61,13 +61,13 @@
         <div class="form-group">
           <label class="control-label col-sm-3">Username</label>
           <div class="col-sm-9">
-            <input id="user-tf" type="text" name="user" class="form-control disabled">
+            <input id="user-tf" type="text" name="user" value="prattography"class="form-control disabled">
           </div>
         </div>
         <div class="form-group">
           <label class="control-label col-sm-3">Password</label>
           <div class="col-sm-9">
-            <input id="pass-tf" type="password" name="pass" value="" class="form-control">
+            <input id="pass-tf" type="password" name="pass" value="teamrocket" class="form-control">
           </div>
         </div>
         <hr>
