--- a/public/signup.html
+++ b/public/signup.html
@@ -3,41 +3,31 @@
   <head>
       
 
-    <title>Node.js Login</title>
+    <title>Columbia Game</title>
     <link rel="stylesheet" href="/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/login.css">
   </head>
   <body>
-  <a href="http://jquery.com/">jQuery</a>
+  
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-<script type="text/javascript" src="signup.js"></script>    
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <div class="navbar-brand">Node Login</div>
-        </div>
-        <ul class="nav navbar-nav navbar-right">
-          <li>
-            <div class="navbar-btn"><a href="https://github.com/braitsch/node-login#readme" class="btn btn-default">Documentation</a></div>
-          </li>
-          <li>
-            <div class="navbar-btn"><a href="https://github.com/braitsch/node-login" class="btn btn-default">Source</a></div>
-          </li>
-          <li>
-            <div id="btn-donate" class="navbar-btn btn btn-default">Donate</div>
-          </li>
-          <li>
-            <div class="navbar-btn"><a href="http://braitsch.io" class="btn btn-default">&copy; braitsch</a></div>
-          </li>
-          <li>
-            <div id="btn-logout" class="navbar-btn btn btn-primary hide">Sign Out</div>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <script type="text/javascript" src="signup.js"></script>    
+
+    <div class="login-page">
+  <div class="form">
+    <form method="get" id="acount-form" class="login-form" onSubmit="return backToLogin();">
+      <input id="name-tf" type="text" name="name" value="Pratishta Yerakala" placeholder="name"/>
+      <input id="user-tf" type="text" name="user" value="prattography" placeholder="username"/>
+      <input id="pass-tf" type="password" name="pass" value="teamrocket" placeholder="password"/>
+      <input id="email-tf" type="text" name="email" value="my@email.com" placeholder="email address"/>
+      <button type="submit" id="create-account">create</button>
+      <p class="message">Already registered? <a href="/login">Sign In</a></p>
+    </form>
+  </div>
+  </div>
+    
     <!-- preset form values if we receive a userdata object //-->
     <!-- store the userId on the client side in a hidden input field //-->
-    <input type="hidden" id="userId">
+    <!-- <input type="hidden" id="userId">
     <div id="account-form-container" class="center-vertical">
       <form method="post" id="account-form" class="form-horizontal well" onSubmit="return backToLogin();" >
         <h2></h2>
@@ -77,7 +67,7 @@
         </div>
         <div class="clearfix"></div>
       </form>
-    </div>
+    </div> -->
 
   
   </body>
