have login but bad request error showing up

--- a/public/login.html
+++ b/public/login.html
@@ -9,7 +9,7 @@
 
   <div class="login-page">
   <div class="form">
-    <form method="get" class="login-form">
+    <form method="post" id="login-form" class="signin-form" action="/login">
       <input type="text" id="user-tf" name="user" placeholder="username"/>
       <input type="password" id="pass-tf" name="pass" placeholder="password"/>
       <button>login</button>
