--- a/public/signup.html
+++ b/public/signup.html
@@ -14,7 +14,7 @@
 
     <div class="login-page">
   <div class="form">
-    <form method="get" id="acount-form" class="login-form" onSubmit="return backToLogin();">
+    <form method="post" id="acount-form" class="register-form" onSubmit="return backToLogin();">
       <input id="name-tf" type="text" name="name" value="Pratishta Yerakala" placeholder="name"/>
       <input id="user-tf" type="text" name="user" value="prattography" placeholder="username"/>
       <input id="pass-tf" type="password" name="pass" value="teamrocket" placeholder="password"/>
