fixed bad request working on db authentication

--- a/public/login.html
+++ b/public/login.html
@@ -7,6 +7,9 @@
   </head>
   <body>
 
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+    <script type="text/javascript" src="signup.js"></script> 
+
   <div class="login-page">
   <div class="form">
     <form method="post" id="login-form" class="signin-form" action="/login">
