backing up login without proper authentication

--- a/public/signup.html
+++ b/public/signup.html
@@ -12,7 +12,7 @@
 
     <div class="login-page">
   <div class="form">
-  <form method="post" id="account-form" class="signin-form" onSubmit="return backToLogin();">
+  <form method="post" id="account-form" class="signin-form" action="/signup">
       <input id="name-tf" type="text" name="name" value="Pratishta Yerakala" placeholder="name"/>
       <input id="user-tf" type="text" name="user" value="prattography" placeholder="username"/>
       <input id="pass-tf" type="password" name="pass" value="teamrocket" placeholder="password"/>
