--- a/public/home.html
+++ b/public/home.html
@@ -14,10 +14,13 @@
 <body>
     <!-- <h1>welcome</h1> -->
 	
+    <script src="util.js"></script>
     <script src="entity.js"></script>
-	<script src="editor.js"></script>
+    <script src="editorLayouts.js"></script>
+    <script src="editor.js"></script>
     <script src="scene.js"></script>
     <script src="createScene.js"></script>
+    <script src="serializer.js"></script>
 </body>
 
 </html>
