--- a/public/login.html
+++ b/public/login.html
@@ -16,7 +16,7 @@
       <input type="text" id="user-tf" name="user" placeholder="username"/>
       <input type="password" id="pass-tf" name="pass" placeholder="password"/>
       <button>login</button>
-      <p class="message">Not registered? <a href="/signup">Create an account</a></p>
+<!--       <p class="message">Not registered? <a href="/signup">Create an account</a></p> -->
     </form>
   </div>
   </div>
