login changed to diff routes

--- a/public/login.html
+++ b/public/login.html
@@ -13,8 +13,8 @@
   <div class="login-page">
   <div class="form">
     <form method="post" id="login-form" class="signin-form" action="/login">
-      <input type="text" id="user-tf" name="user" placeholder="username"/>
-      <input type="password" id="pass-tf" name="pass" placeholder="password"/>
+      <input type="text" id="user-tf" name="username" placeholder="username"/>
+      <input type="password" id="pass-tf" name="password" placeholder="password"/>
       <button>login</button>
       <p class="message">Not registered? <a href="/signup">Create an account</a></p>
     </form>
