--- a/public/signup.html
+++ b/public/signup.html
@@ -13,10 +13,8 @@
     <div class="login-page">
   <div class="form">
   <form method="post" id="account-form" class="signin-form" action="/signup">
-      <input id="name-tf" type="text" name="name" value="Pratishta Yerakala" placeholder="name"/>
-      <input id="user-tf" type="text" name="user" value="prattography" placeholder="username"/>
-      <input id="pass-tf" type="password" name="pass" value="teamrocket" placeholder="password"/>
-      <input id="email-tf" type="text" name="email" value="my@email.com" placeholder="email address"/>
+      <input id="user-tf" type="text" name="username" value="prattography" placeholder="username"/>
+      <input id="pass-tf" type="password" name="password" value="teamrocket" placeholder="password"/>
       <button type="submit" id="create-account">create</button>
       <p class="message">Already registered? <a href="/login">Sign In</a></p>
     </form>
